--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>*</members>
+        <members>OrderProductController</members>
+        <members>AvailableProductsController</members>
+        <members>OrderService</members>
+        <members>AvailableProductsControllerTest</members>
+        <members>OrderProductControllerTest</members>
+        <members>RESTMockServiceResponseGenerator</members>
+        <members>TestDataFactory</members>
+        <members>DummyController</members>
+        <members>CountryCodeHelper</members>
+        <members>testController</members>
         <name>ApexClass</name>
     </types>
     <types>
-        <members>*</members>
+        <members>auraComponent1</members>
         <name>ApexComponent</name>
     </types>
     <types>
-        <members>*</members>
+        <members>communicationSamplePage</members>
         <name>ApexPage</name>
     </types>
     <types>
@@ -25,16 +34,44 @@
         <name>AuraDefinitionBundle</name>
     </types>
     <types>
-        <members>*</members>
+        <members>orderProducts</members>
+        <members>utility</members>
+        <members>availableProducts</members>
+        <members>component1pubsub</members>
+        <members>component2pubsub</members>
+        <members>component3lms</members>
+        <members>multipleApexCall</members>
+        <members>pubsub</members>
+        <members>testChild</members>
+        <members>testParent</members>
         <name>LightningComponentBundle</name>
     </types>
     <types>
-        <members>*</members>
+        <members>vfmiddleman</members>
         <name>StaticResource</name>
     </types>
     <types>
-        <members>*</members>
+        <members>AuraChannel</members>
+        <members>LWCChannel</members>
+        <members>VFChannel</members>
+        <members>OrderItemUpsert</members>
         <name>LightningMessageChannel</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>CustomLabels</name>
+    </types>
+    <types>
+        <members>Order_Record_Page</members>
+        <name>FlexiPage</name>
+    </types>
+    <types>
+        <members>OrderExternalSystemNamedCredential</members>
+        <name>NamedCredential</name>
+    </types>
+    <types>
+        <members>Order_Request</members>
+        <name>CustomMetadata</name>
     </types>
     <version>52.0</version>
 </Package>
