--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,77 +1,78 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>OrderProductController</members>
-        <members>AvailableProductsController</members>
-        <members>OrderService</members>
-        <members>AvailableProductsControllerTest</members>
-        <members>OrderProductControllerTest</members>
-        <members>RESTMockServiceResponseGenerator</members>
-        <members>TestDataFactory</members>
-        <members>DummyController</members>
-        <members>CountryCodeHelper</members>
-        <members>testController</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>auraComponent1</members>
-        <name>ApexComponent</name>
-    </types>
-    <types>
-        <members>communicationSamplePage</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTestSuite</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>AuraDefinitionBundle</name>
-    </types>
-    <types>
-        <members>orderProducts</members>
-        <members>utility</members>
-        <members>availableProducts</members>
-        <members>component1pubsub</members>
-        <members>component2pubsub</members>
-        <members>component3lms</members>
-        <members>multipleApexCall</members>
-        <members>pubsub</members>
-        <members>testChild</members>
-        <members>testParent</members>
-        <name>LightningComponentBundle</name>
-    </types>
-    <types>
-        <members>vfmiddleman</members>
-        <name>StaticResource</name>
-    </types>
-    <types>
-        <members>AuraChannel</members>
-        <members>LWCChannel</members>
-        <members>VFChannel</members>
-        <members>OrderItemUpsert</members>
-        <name>LightningMessageChannel</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>CustomLabels</name>
-    </types>
-    <types>
-        <members>Order_Record_Page</members>
-        <name>FlexiPage</name>
-    </types>
-    <types>
-        <members>OrderExternalSystemNamedCredential</members>
-        <name>NamedCredential</name>
-    </types>
-    <types>
-        <members>Order_Request</members>
-        <name>CustomMetadata</name>
-    </types>
-    <version>52.0</version>
+	<types>
+		<members>AvailableProductsController</members>
+		<members>AvailableProductsControllerTest</members>
+		<members>CountryCodeHelper</members>
+		<members>DummyController</members>
+		<members>OrderProductController</members>
+		<members>OrderProductControllerTest</members>
+		<members>OrderService</members>
+		<members>RESTMockServiceResponseGenerator</members>
+		<members>TestDataFactory</members>
+		<members>testController</members>
+		<name>ApexClass</name>
+	</types>
+	<types>
+		<members>communicationSamplePage</members>
+		<name>ApexPage</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>ApexTestSuite</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>ApexTrigger</name>
+	</types>
+	<types>
+		<members>auraComponent1</members>
+		<name>AuraDefinitionBundle</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>CustomLabels</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>CustomMetadata</name>
+	</types>
+	<types>
+		<members>Country_Code__mdt</members>
+		<members>Order_Request__mdt</members>
+		<name>CustomObject</name>
+	</types>
+	<types>
+		<members>Order_Record_Page</members>
+		<name>FlexiPage</name>
+	</types>
+	<types>
+		<members>availableProducts</members>
+		<members>component1pubsub</members>
+		<members>component2pubsub</members>
+		<members>component3lms</members>
+		<members>multipleApexCall</members>
+		<members>orderProducts</members>
+		<members>pubsub</members>
+		<members>testChild</members>
+		<members>testParent</members>
+		<members>utility</members>
+		<name>LightningComponentBundle</name>
+	</types>
+	<types>
+		<members>AuraChannel</members>
+		<members>LWCChannel</members>
+		<members>OrderItemUpsert</members>
+		<members>VFChannel</members>
+		<name>LightningMessageChannel</name>
+	</types>
+	<types>
+		<members>OrderExternalSystemNamedCredential</members>
+		<name>NamedCredential</name>
+	</types>
+	<types>
+		<members>vfmiddleman</members>
+		<name>StaticResource</name>
+	</types>
+	<version>53.0</version>
 </Package>
