--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,13 +1,18 @@
 {
-  "orgName": "omerfarukozdemir company",
+  "orgName": "omer faruk ozdemir scratch org",
   "edition": "Developer",
-  "features": ["EnableSetPasswordInApi"],
+  "hasSampleData": false,
+  "features": ["Walkthroughs", "EnableSetPasswordInApi"],
   "settings": {
-    "lightningExperienceSettings": {
-      "enableS1DesktopEnabled": true
-    },
-    "mobileSettings": {
-      "enableS1EncryptedStoragePref2": false
-    }
+      "lightningExperienceSettings": {
+          "enableS1DesktopEnabled": true
+      },
+      "mobileSettings": {
+          "enableS1EncryptedStoragePref2": false
+      },
+      "userEngagementSettings": {
+          "enableOrchestrationInSandbox": true,
+          "enableShowSalesforceUserAssist": false
+      }
   }
 }
