--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,11 +54,10 @@ jobs:
           command: |
             mkdir -p ~/junit
             sfdx force:apex:test:run -c -r human -d ./tests/apex -w 20
-      - run: 
+      - uses: codecov/codecov-action@v2
           name: Upload code coverage for Apex to Codecov.io
-          uses: codecov/codecov-action@v1
           with:
-          flags: Apex
+            flags: Apex
       - run:
           name: Delete Useless Scratch Org
           command: |
