--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,47 +17,47 @@ jobs:
     name: format-lint-lwc-tests
     runs-on: ubuntu-latest
     steps:
-            # Checkout the source code
-            - name: 'Checkout source code'
-              uses: actions/checkout@v2
+    # Checkout the source code
+    - name: Checkout source code
+      uses: actions/checkout@v2
 
-            # Install Volta to enforce proper node and package manager versions
-            - name: 'Install Volta'
-              uses: volta-cli/action@v1
+    # Install Volta to enforce proper node and package manager versions
+    - name: 'Install Volta'
+      uses: volta-cli/action@v1
 
-            # Cache node_modules to speed up the process
-            - name: 'Restore node_modules cache'
-              id: cache-npm
-              uses: actions/cache@v1
-              with:
-                  path: node_modules
-                  key: npm-${{ hashFiles('**/package-lock.json') }}
-                  restore-keys: |
-                      npm-${{ env.cache-name }}-
-                      npm-
+    # Cache node_modules to speed up the process
+    - name: 'Restore node_modules cache'
+      id: cache-npm
+      uses: actions/cache@v1
+      with:
+          path: node_modules
+          key: npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+              npm-${{ env.cache-name }}-
+              npm-
 
-            # Install npm dependencies for Prettier and Jest
-            - name: 'Install npm dependencies'
-              if: steps.cache-npm.outputs.cache-hit != 'true'
-              run: npm ci
+    # Install npm dependencies for Prettier and Jest
+    - name: 'Install npm dependencies'
+      if: steps.cache-npm.outputs.cache-hit != 'true'
+      run: npm ci
 
-            # Prettier formatting
-            - name: 'Code formatting verification with Prettier'
-              run: npm run prettier:verify
+    # Prettier formatting
+    - name: 'Code formatting verification with Prettier'
+      run: npm run prettier:verify
 
-            # Lint LWC / Aura
-            - name: 'Lint Lightning Web Components / Aura Components'
-              run: npm run lint
+    # Lint LWC / Aura
+    - name: 'Lint Lightning Web Components / Aura Components'
+      run: npm run lint
 
-            # LWC unit tests
-            - name: 'Unit test Lightning Web Components'
-              run: npm run test:unit:coverage
+    # LWC unit tests
+    - name: 'Unit test Lightning Web Components'
+      run: npm run test:unit:coverage
 
-            # Upload code coverage data
-            - name: 'Upload code coverage for LWC to Codecov.io'
-              uses: codecov/codecov-action@v2.0.2
-              with:
-                  flags: LWC
+    # Upload code coverage data
+    - name: 'Upload code coverage for LWC to Codecov.io'
+      uses: codecov/codecov-action@v2.0.2
+      with:
+          flags: LWC
 
     scratch-org-test:
         runs-on: ubuntu-latest
