--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,141 +1,67 @@
-# Unique name for this workflow
-name: CI
+version: 2
 
-# Definition when the workflow should run
-on:
-    workflow_dispatch:
-    push:
-        branches:
-            - master
-        paths-ignore:
-            - 'sfdx-project.json'
-            - 'README.md'
+general:
+# Uncomment the following to specify only a specific branch
+#   branches:
+#     only:
+#       - dev # specific branch
+#       - /dev-.*/ # or regexes
 
-# Jobs to be executed
 jobs:
   build:
-    name: format-lint-lwc-tests
-    runs-on: ubuntu-latest
+    machine: true
+    working_directory: ~/ci_app
+    environment:
+      # from https://developer.salesforce.com/docs/atlas.en-us.sfdx_setup.meta/sfdx_setup/sfdx_setup_install_cli_standalone.htm
+      # and https://developer.salesforce.com/media/salesforce-cli/manifest.json
+      - DX_CLI_URL: https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
     steps:
-    # Checkout the source code
-    - name: Checkout source code
-      uses: actions/checkout@v2
+      - checkout
+      - run:
+          name: Download CLI
+          command: |
+            mkdir sfdx
+            wget -qO- $DX_CLI_URL | tar xJ -C sfdx --strip-components 1
+      - run:
+          name: Install CLI
+          command: |
+            ./sfdx/install
+            sfdx
+            mkdir tmp
+      - run:
+          name: Create hub key
+          command: |
+            echo 'make hub key'
+            #- mkdir keys
+            #- echo $HUB_SERVER_KEY_HEX | xxd -r -ps >> keys/hub.key
+            openssl enc -nosalt -aes-256-cbc -d -in assets/server.key.enc -out assets/server.key -base64 -K $DECRYPTION_KEY -iv $DECRYPTION_IV
+            #- openssl rsa -in keys/hub.key -check -noout
+          ### Uncomment the following if performing deployments
+          #- echo 'make deploy key'
+          #- echo $DEPLOY_SERVER_KEY_HEX | xxd -r -ps >> keys/deploy.key
+          #- openssl rsa -in keys/deploy.key -check -noout
+          #- sfdx force:auth:jwt:grant --clientid $DEPLOY_CONSUMER_KEY --jwtkeyfile keys/deploy.key --username $DEPLOY_SFDC_USER -a deploy
+      - run:
+          name: Setup Org
+          command: |
+            echo 'Setup Org'
+            sfdx force:auth:jwt:grant --clientid $HUB_CONSUMER_KEY --jwtkeyfile assets/server.key --username $HUB_SFDC_USER --setdefaultdevhubusername -a hub
+            sfdx force --help
+            sfdx force:org:create -s -f ~/ci_app/config/project-scratch-def.json -a circle_build_$CIRCLE_BUILD_NUM --wait 4
+            sfdx force:source:push -u circle_build_$CIRCLE_BUILD_NUM
+      - run:
+          name: Run Apex Tests
+          command: |
+            mkdir -p ~/junit
+            sfdx force:apex:test:run -c -r human -d ./tests/apex -w 20
+      - run:
+          name: Delete Useless Scratch Org
+          command: |
+            sfdx force:org:delete -u circle_build_$CIRCLE_BUILD_NUM -p
 
-    # Install Volta to enforce proper node and package manager versions
-    - name: 'Install Volta'
-      uses: volta-cli/action@v1
-
-    # Cache node_modules to speed up the process
-    - name: 'Restore node_modules cache'
-      id: cache-npm
-      uses: actions/cache@v1
-      with:
-          path: node_modules
-          key: npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-              npm-${{ env.cache-name }}-
-              npm-
-
-    # Install npm dependencies for Prettier and Jest
-    - name: 'Install npm dependencies'
-      if: steps.cache-npm.outputs.cache-hit != 'true'
-      run: npm ci
-
-    # Prettier formatting
-    - name: 'Code formatting verification with Prettier'
-      run: npm run prettier:verify
-
-    # Lint LWC / Aura
-    - name: 'Lint Lightning Web Components / Aura Components'
-      run: npm run lint
-
-    # LWC unit tests
-    - name: 'Unit test Lightning Web Components'
-      run: npm run test:unit:coverage
-
-    # Upload code coverage data
-    - name: 'Upload code coverage for LWC to Codecov.io'
-      uses: codecov/codecov-action@v2.0.2
-      with:
-          flags: LWC
-
-    scratch-org-test:
-        runs-on: ubuntu-latest
-        needs: format-lint-lwc-tests
-        if: ${{ github.actor != 'dependabot[bot]' }}
-        steps:
-            # Checkout the source code
-            - name: 'Checkout source code'
-              uses: actions/checkout@v2
-
-            # Run PMD scan
-            - name: 'Run PMD scan'
-              uses: pmd/pmd-github-action@v1.2.1
-              id: pmd
-              with:
-                  sourcePath: 'force-app'
-                  rulesets: 'ruleset.xml'
-
-            # Check for PMD violations
-            - name: 'Check for PMD violations'
-              if: steps.pmd.outputs.violations != 0
-              run: exit 1
-
-            # Install Salesforce CLI
-            - name: 'Install Salesforce CLI'
-              run: |
-                  wget https://developer.salesforce.com/media/salesforce-cli/sfdx/channels/stable/sfdx-linux-x64.tar.xz
-                  mkdir ~/sfdx
-                  tar xJf sfdx-linux-x64.tar.xz -C ~/sfdx --strip-components 1
-                  echo "$HOME/sfdx/bin" >> $GITHUB_PATH
-                  ~/sfdx/bin/sfdx version
-
-            # Store secret for dev hub
-            - name: 'Populate auth file with DEVHUB_SFDX_URL secret'
-              shell: bash
-              run: |
-                  echo ${{ secrets.DEVHUB_SFDX_URL}} > ./DEVHUB_SFDX_URL.txt
-                  secretFileSize=$(wc -c "./DEVHUB_SFDX_URL.txt" | awk '{print $1}')
-                  if [ $secretFileSize == 1 ]; then
-                      echo "Missing DEVHUB_SFDX_URL secret. Is this workflow running on a fork?";
-                      exit 1;
-                  fi
-
-            # Authenticate dev hub
-            - name: 'Authenticate Dev Hub'
-              run: sfdx auth:sfdxurl:store -f ./DEVHUB_SFDX_URL.txt -a devhub -d
-
-            # Create scratch org
-            - name: 'Create scratch org'
-              run: sfdx force:org:create -f config/project-scratch-def.json -a scratch-org -s -d 1
-
-            # Deploy source to scratch org
-            - name: 'Push source to scratch org'
-              run: sfdx force:source:push
-
-            # Assign permissionset
-            # - name: 'Assign permissionset to default user'
-            #   run: sfdx force:user:permset:assign -n recipes
-
-            # Import sample data
-            # - name: 'Import sample data'
-            #   run: sfdx force:data:tree:import -p ./data/data-plan.json
-
-            # Run Apex tests in scratch org
-            - name: 'Run Apex tests'
-              run: sfdx force:apex:test:run -c -r human -d ./tests/apex -w 20
-
-            # Delete temporary test file that Codecov is unable to parse
-            - name: 'Delete coverage file (temporary step)'
-              run: rm ./tests/apex/test-result-707*-codecoverage.json
-
-            # Upload code coverage data
-            - name: 'Upload code coverage for Apex to Codecov.io'
-              uses: codecov/codecov-action@v2.0.2
-              with:
-                  flags: Apex
-
-            # Housekeeping
-            - name: 'Delete scratch org'
-              if: always()
-              run: sfdx force:org:delete -p -u scratch-org
+### Uncomment the following if performing deployments
+#deployment:
+#  override:
+#    - sfdx force:source:convert -r force-app -d testDeploy
+#    - . cleanupDeploy.sh
+#    - sfdx force:mdapi:deploy -d testDeploy/ -u deploy -w 2
